--- a/eternalMath.html
+++ b/eternalMath.html
@@ -1,5 +1,5 @@
 <HTML>
 <BODY>
-<applet code="EternalMath.class" codebase="bin" width="800" height="600"></applet>
+<APPLET CODE="com.artima.EternalMath.class" CODEBASE="bin" WIDTH="800" HEIGHT="600"></APPLET>
 </BODY>
 </HTML>
